--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 
   </section>
 
-  <section id="home" class="home">
+  <section id="home" class="home w-100 h-100 p-3 mx-auto d-flex justify-content-center align-items-center">
     <div class="container">
       <div class="row justify-content-center">
         <div class="col-md-8 text-center">
@@ -52,29 +52,25 @@
       <div class="row couple">
         <div class="col-lg-6">
           <div class="row">
-            <div class="col-8 text-end">
+            <div class="col-10 text-end pria">
               <h3>Muhammad Anjotho Satru</h3>
-              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque praesentium aut ipsa perferendis,
-                incidunt soluta?</p>
               <p>Putra dari Bpk. Sudiarso/Slamet <br> dan <br> Ibu Eni Tri Agustiningrum</p>
             </div>
-            <div class="col-4">
+            <!-- <div class="col-4">
               <img src="img/sandhika.png" alt="Sandhika Galih" class="img-responsive rounded-circle">
-            </div>
+            </div> -->
           </div>
         </div>
 
         <span class="heart"><i class="bi bi-heart-fill"></i></span>
 
         <div class="col-lg-6">
-          <div class="row">
-            <div class="col-4">
+          <div class="row justify-content-end">
+            <!-- <div class="col-4">
               <img src="img/nofa.png" alt="Nofariza" class="img-responsive rounded-circle">
-            </div>
-            <div class="col-8">
+            </div> -->
+            <div class="col-10 wanita">
               <h3>Eka Fitria Ramadhani</h3>
-              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque praesentium aut ipsa perferendis,
-                incidunt soluta?</p>
               <p>Putri dari Bpk. Suparlan (Alm) <br> dan <br> Ibu Titik Sutarsih</p>
             </div>
           </div>
@@ -111,7 +107,7 @@
               <div class="row justify-content-center">
                 <div class="col-md-6">
                   <i class="bi bi-clock d-block"></i>
-                  <span>08.00 - 10.00</span>
+                  <span>08.00 - 09.00</span>
                 </div>
                 <div class="col-md-6">
                   <i class="bi bi-calendar3 d-block"></i>
@@ -131,7 +127,7 @@
               <div class="row justify-content-center">
                 <div class="col-md-6">
                   <i class="bi bi-clock d-block"></i>
-                  <span>11.00 - selesai</span>
+                  <span>10.00 - selesai</span>
                 </div>
                 <div class="col-md-6">
                   <i class="bi bi-calendar3 d-block"></i>
@@ -154,7 +150,7 @@
         <div class="col-md-8 col-10 text-center">
           <span>ungkapan tanda kasih</span>
           <h2>Kirim Hadiah</h2>
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam iure perferendis provident ab aliquam nemo.
+          <p>Apabila berhalangan hadir, anda masih dapat berpartisipasi dalam acara kami dengan memberikan hadiah ungkapan tanda kasih.
           </p>
         </div>
       </div>
@@ -172,7 +168,7 @@
             </li>
             <li class="list-group-item">
               <div class="fw-bold">DANA</div>
-              <img src="img/saweria.png" alt="Saweria QR" class="img-thumbnail" width="150">
+              <img src="img/danaanju.jpeg" alt="Saweria QR" class="img-thumbnail" width="150">
             </li>
           </ul>
         </div>
