tambah rekening eka

--- a/index.html
+++ b/index.html
@@ -168,6 +168,14 @@
               1780004246258 - MUHAMMAD ANJOTHO SATRU
             </li>
             <li class="list-group-item">
+              <div class="fw-bold">BCA</div>
+              3300933253 - EKA FITRIA RAMADHANI
+            </li>
+            <li class="list-group-item">
+              <div class="fw-bold">BRI</div>
+              6304 0101 9274 539 - EKA FITRIA RAMADHANI
+            </li>
+            <li class="list-group-item">
               <div class="fw-bold">DANA</div>
               <img src="img/danaanju.jpeg" alt="Saweria QR" class="img-thumbnail" width="150">
             </li>
